k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isr-internship-ingress
  namespace: isr-internship
spec:
  ingressClassName: nginx
  rules:
    # Aturan untuk mengarahkan traffic ke Frontend
    - host: "internship.oasislab.id"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000

    - host: "api-internship.oasislab.id"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
